--- a/css/styles.css
+++ b/css/styles.css
@@ -230,7 +230,7 @@ body {
 .cursos {
   padding: 3rem 0;
   background-color: var(--cor1) !important;
-  height: 700px; /* Definindo uma altura fixa para a seção */
+  height: 100vh; /* Definindo uma altura fixa para a seção */
   display: flex;
   justify-content: center;
   align-items: center; /* Centraliza o conteúdo dentro da seção */
@@ -251,7 +251,7 @@ body {
   border: none;
   width: 60%; /* Ajusta a largura dos cartões */
   max-width: 500px; /* Limita a largura máxima dos cartões */
-  height: 100%;
+  height: 80vh;
   margin: 0 auto; /* Centraliza os cartões */
   border-radius: 8px;
   transition: transform 0.3s ease;
@@ -343,6 +343,7 @@ body {
     background-color: #f4f4f4; /* Cor de fundo */
     padding-top: 40px;
     padding-bottom: 40px;
+    
   }
   
   .formulario-inscricao h2 {
