--- a/css/styles.css
+++ b/css/styles.css
@@ -238,7 +238,7 @@ body {
 }
 
 .cursos h2 {
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
   font-size: 2.5rem;
   font-weight: bold;
   color: #ffffff;
@@ -249,15 +249,16 @@ body {
 .carousel .card {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border: none;
-  width: 60%; /* Ajusta a largura dos cartões */
-  max-width: 500px; /* Limita a largura máxima dos cartões */
-  height: 80vh;
+  width: 80%; /* Ajusta a largura dos cartões */
+  max-width: 600px; /* Limita a largura máxima dos cartões */
+  height: 80%; /* Ajusta a altura para manter a proporção */
   margin: 0 auto; /* Centraliza os cartões */
   border-radius: 8px;
   transition: transform 0.3s ease;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-color: #fff; /* Fundo branco para contraste */
 }
 
 .carousel .card img {
@@ -270,13 +271,13 @@ body {
 .carousel .card-title {
   font-size: 1.5rem;
   font-weight: bold;
-  color: black;
+  color: #333;
   text-align: center;
 }
 
 .carousel .card-text {
   font-size: 1rem;
-  color: black;
+  color: #666;
   margin-bottom: 1rem;
   text-align: center;
 }
@@ -291,18 +292,6 @@ body {
   background-color: black;
 }
 
-/* Indicadores personalizados */
-.carousel-indicators [data-bs-target] {
-  background-color: #ffffff !important;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  transition: background-color 0.3s ease;
-}
-
-.carousel-indicators .active {
-  background-color: #0056b3;
-}
 
 /* Controles do carrossel */
 .carousel-control-prev-icon,
@@ -315,25 +304,34 @@ body {
 /* Responsividade para telas menores */
 @media (max-width: 768px) {
   .cursos {
-    height: 500px; /* Para telas menores, ajusta a altura da seção */
+    height: 600px; /* Ajusta a altura da seção para tablets */
   }
 
   .carousel .card {
     width: 90%; /* Os cartões ocupam 90% da largura */
+    height: auto; /* Ajusta a altura de acordo com o conteúdo */
   }
 }
 
 @media (max-width: 576px) {
   .cursos {
-    height: 400px; /* Para telas muito pequenas, ajusta a altura da seção */
+    height: 800px; /* Ajusta a altura da seção para celulares */
   }
 
   .carousel .card {
-    width: 100%; /* Os cartões ocupam 100% da largura */
+    width: 60%; /* Os cartões ocupam 100% da largura */
   }
 
   .carousel .card img {
     height: 200px; /* Reduz a altura da imagem para telas menores */
+  }
+
+  .carousel .card-title {
+    font-size: 1.2rem; /* Ajusta o tamanho da fonte do título */
+  }
+
+  .carousel .card-text {
+    font-size: 0.9rem; /* Ajusta o tamanho da fonte do texto */
   }
 }
 
